Compiling identical